[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11"
name = "ukconstituencystreetbystreet"
description = "Parses csv files from ONS and Royal Mail free data"
dynamic = ["dependencies", "optional-dependencies"]
version = "0.1.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL 2.0",
    "Operating System :: OS Independent",
]

[project.license]
text = "GPL-3.0"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E", "F"]
ignore = []
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}
# Same as Black.
line-length = 88
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
# Assume Python 3.11
target-version = "py311"

[tool.isort]
profile = "black"

[project.scripts]
output-postcodes = "ukconstituencystreetbystreet.outputter:output_csvs"

[tool.pytest.ini_options]
log_cli = "true"
log_level = "DEBUG"

[tool.poetry.scripts]
ukconstituencystreetbystreet = "ukconstituencystreetbystreet.outputter:output_csvs"

[tool.poetry]
name = "ukconstituencystreetbystreet"
version = "0.1.0"
description = ""
authors = ["Tomas Hotzel Escard <tomas.escardo@gmail.com>"]
readme = "README.md"
packages = [{include = "ukconstituencystreetbystreet"}]

[tool.poetry.dependencies]
python = "^3.11.0"
tqdm = "^4.66.4"
cython = "^3.0.10"
sqlalchemy = "^2.0.30"
pandas = "^2.2.2"
requests = "^2.31.0"
uvloop = "^0.19.0"
scikit-learn = "^1.4.2"
geojson = "^3.1.0"
shapely = "^2.0.4"
geopandas = "^0.14.4"
pyogrio = "^0.7.2"
openpyxl = "^3.1.2"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.3"
black = "^24.4.2"
isort = "^5.13.2"
types-requests = "^2.31.0.20240406"
types-tqdm = "^4.66.0.20240417"
pytest = "^8.2.0"

